# serializer version: 1
#
# Copyright (c) Memfault, Inc.
# See LICENSE for details
#

# name: test_eclipse_project_patcher
  dict({
    '.cproject': '''
      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
      <?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
      	<storageModule moduleId="org.eclipse.cdt.core.settings">
      		<cconfiguration id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446">
      			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446" moduleId="org.eclipse.cdt.core.settings" name="Debug">
      				<externalSettings />
      				<extensions>
      					<extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser" />
      					<extension id="org.eclipse.cdt.core.GASErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.GmakeErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.GLDErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.CWDLocator" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.GCCErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      				</extensions>
      			</storageModule>
      			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
      				<configuration artifactExtension="elf" artifactName="STM32L152RE_NUCLEO" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446" name="Debug" parent="fr.ac6.managedbuild.config.gnu.cross.exe.debug" postannouncebuildStep="Generating binary and Printing size information:" postbuildStep="arm-none-eabi-objcopy -O binary &quot;${BuildArtifactFileBaseName}.elf&quot; &quot;${BuildArtifactFileBaseName}.bin&quot; &amp;&amp; arm-none-eabi-size &quot;${BuildArtifactFileName}&quot;">
      					<folderInfo id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446." name="/" resourcePath="">
      						<toolChain id="fr.ac6.managedbuild.toolchain.gnu.cross.exe.debug.67646101" name="Ac6 STM32 MCU GCC" superClass="fr.ac6.managedbuild.toolchain.gnu.cross.exe.debug">
      							<option id="fr.ac6.managedbuild.option.gnu.cross.prefix.433022468" name="Prefix" superClass="fr.ac6.managedbuild.option.gnu.cross.prefix" value="arm-none-eabi-" valueType="string" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.mcu.1023045885" name="Mcu" superClass="fr.ac6.managedbuild.option.gnu.cross.mcu" value="STM32L152RETx" valueType="string" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.board.544478532" name="Board" superClass="fr.ac6.managedbuild.option.gnu.cross.board" value="NUCLEO-L152RE" valueType="string" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.instructionSet.1885819322" name="Instruction Set" superClass="fr.ac6.managedbuild.option.gnu.cross.instructionSet" value="fr.ac6.managedbuild.option.gnu.cross.instructionSet.thumbII" valueType="enumerated" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.fpu.460055244" name="Floating point hardware" superClass="fr.ac6.managedbuild.option.gnu.cross.fpu" value="fr.ac6.managedbuild.option.gnu.cross.fpu.no" valueType="enumerated" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.floatabi.1747886298" name="Floating-point ABI" superClass="fr.ac6.managedbuild.option.gnu.cross.floatabi" value="fr.ac6.managedbuild.option.gnu.cross.floatabi.soft" valueType="enumerated" />
      							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="fr.ac6.managedbuild.targetPlatform.gnu.cross.66510091" isAbstract="false" osList="all" superClass="fr.ac6.managedbuild.targetPlatform.gnu.cross" />
      							<builder buildPath="${workspace_loc:/STM32L152RE_NUCLEO}/Debug" id="fr.ac6.managedbuild.builder.gnu.cross.583621442" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="fr.ac6.managedbuild.builder.gnu.cross">
      								<outputEntries>
      									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="Debug" />
      								</outputEntries>
      							</builder>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.531660266" name="MCU GCC Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler">
      								<option defaultValue="gnu.c.optimization.level.none" id="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level.1209880627" name="Optimization Level" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" value="fr.ac6.managedbuild.gnu.c.optimization.level.size" valueType="enumerated" />
      								<option id="gnu.c.compiler.option.debugging.level.589920417" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated" />
      								<option id="gnu.c.compiler.option.include.paths.182831158" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
      									<listOptionValue builtIn="false" value="../../../Inc" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/CMSIS/Device/ST/STM32L1xx/Include" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/STM32L1xx_HAL_Driver/Inc" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/BSP/STM32L1xx_Nucleo" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Middlewares/Third_Party/FreeRTOS/Source/include" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/CMSIS/Include" />
      								<listOptionValue builtin="false" value="&quot;${workspace_loc:/${ProjName}/memfault_includes/components/include}&quot;" />
      									<listOptionValue builtin="false" value="&quot;${workspace_loc:/${ProjName}/memfault_includes/ports/include}&quot;" />
      									</option>
      								<option id="gnu.c.compiler.option.preprocessor.def.symbols.824961392" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
      									<listOptionValue builtIn="false" value="STM32L152xE" />
      									<listOptionValue builtIn="false" value="USE_STM32L1XX_NUCLEO" />
      									<listOptionValue builtIn="false" value="USE_HAL_DRIVER" />
      								</option>
      								<option id="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other.867106523" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-fmessage-length=0" valueType="string" />
      								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c.500700198" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c" />
      								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.s.1769769059" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.s" />
      							</tool>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler.1807716003" name="MCU G++ Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler">
      								<option id="gnu.cpp.compiler.option.optimization.level.555190386" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated" />
      								<option id="gnu.cpp.compiler.option.debugging.level.1333063404" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated" />
      							</tool>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.c.linker.48637223" name="MCU GCC Linker" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.linker">
      								<option id="fr.ac6.managedbuild.tool.gnu.cross.c.linker.script.2000917657" name="Linker Script (-T)" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.linker.script" value="../STM32L152RETx_FLASH.ld" valueType="string" />
      								<option id="gnu.c.link.option.libs.493794812" name="Libraries (-l)" superClass="gnu.c.link.option.libs" />
      								<option id="gnu.c.link.option.paths.179691201" name="Library search path (-L)" superClass="gnu.c.link.option.paths" />
      								<option id="gnu.c.link.option.ldflags.2147304053" name="Linker flags" superClass="gnu.c.link.option.ldflags" value="-specs=nosys.specs -specs=nano.specs" valueType="string" />
      								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.1696379112" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
      									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)" />
      									<additionalInput kind="additionalinput" paths="$(LIBS)" />
      								</inputType>
      							</tool>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.cpp.linker.1642466824" name="MCU G++ Linker" superClass="fr.ac6.managedbuild.tool.gnu.cross.cpp.linker" />
      							<tool id="fr.ac6.managedbuild.tool.gnu.archiver.401772641" name="MCU GCC Archiver" superClass="fr.ac6.managedbuild.tool.gnu.archiver" />
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.assembler.756297622" name="MCU GCC Assembler" superClass="fr.ac6.managedbuild.tool.gnu.cross.assembler">
      								<option id="gnu.both.asm.option.include.paths.1934772483" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath" />
      								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1812370298" superClass="cdt.managedbuild.tool.gnu.assembler.input" />
      								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.assembler.input.134028949" superClass="fr.ac6.managedbuild.tool.gnu.cross.assembler.input" />
      							</tool>
      						</toolChain>
      					</folderInfo>
      					<sourceEntries>
      						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="" />
      					</sourceEntries>
      				</configuration>
      			</storageModule>
      			<storageModule moduleId="org.eclipse.cdt.core.externalSettings" />
      		</cconfiguration>
      	</storageModule>
      	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
      		<project id="STM32L152RE_NUCLEO.fr.ac6.managedbuild.target.gnu.cross.exe.1040121120" name="Executable" projectType="fr.ac6.managedbuild.target.gnu.cross.exe" />
      	</storageModule>
      	<storageModule moduleId="scannerConfiguration">
      		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="" />
      		<scannerConfigBuildInfo instanceId="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446;fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446.;fr.ac6.managedbuild.tool.gnu.cross.c.compiler.531660266;fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c.500700198">
      			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId="" />
      		</scannerConfigBuildInfo>
      		
      	</storageModule>
      	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders" />
      	<storageModule moduleId="refreshScope" versionNumber="2">
      		<configuration artifactName="STM32L152RE_NUCLEO" configurationName="Debug">
      			<resource resourceType="PROJECT" workspacePath="STM32L152RE_NUCLEO" />
      		</configuration>
      	</storageModule>
      </cproject>
    ''',
    '.project': '''
      <projectDescription>
      	<name>STM32L152RE_NUCLEO</name>
      	<comment />
      	<projects>
      	</projects>
      	<buildSpec>
      		<buildCommand>
      			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
      			<triggers>clean,full,incremental,</triggers>
      			<arguments>
      			</arguments>
      		</buildCommand>
      		<buildCommand>
      			<name>org.eclipse.cdt.managedbuilder.core.ScannerConfigBuilder</name>
      			<triggers>full,incremental,</triggers>
      			<arguments>
      			</arguments>
      		</buildCommand>
      	</buildSpec>
      	<natures>
      		<nature>org.eclipse.cdt.core.cnature</nature>
      		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
      		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
      		<nature>fr.ac6.mcu.ide.core.MCUProjectNature</nature>
      	</natures>
      	<linkedResources><link>
      			<name>Middlewares/FreeRTOS/tasks.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/tasks.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc_ex.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_rcc_ex.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_gpio.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_gpio.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_cortex.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_cortex.c</location>
      		</link><link>
      			<name>Application/User/stm32l1xx_it.c</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/Src/stm32l1xx_it.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/portable/heap_4.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/CMSIS_RTOS/cmsis_os.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c</location>
      		</link><link>
      			<name>Drivers/BSP/STM32L1xx_Nucleo/stm32l1xx_nucleo.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/BSP/STM32L1xx_Nucleo/stm32l1xx_nucleo.c</location>
      		</link><link>
      			<name>Application/User/main.c</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/Src/main.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/queue.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/queue.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/list.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/list.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_pwr.c</location>
      		</link><link>
      			<name>Application/SW4STM32/startup_stm32l152xe.s</name>
      			<type>1</type>
      			<location>PARENT-1-PROJECT_LOC/startup_stm32l152xe.s</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_rcc.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/portable/port.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3/port.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr_ex.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_pwr_ex.c</location>
      		</link><link>
      			<name>Doc/readme.txt</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/readme.txt</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/timers.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/timers.c</location>
      		</link><link>
      			<name>Drivers/CMSIS/system_stm32l1xx.c</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/Src/system_stm32l1xx.c</location>
      		</link>
      		
      	<link>
      		<name>memfault_components</name>
      		<type>2</type>
      		<locationURI>virtual:/virtual</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/arch_arm_cortex_m.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/arch_arm_cortex_m.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_batched_events.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_batched_events.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_build_id.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_build_id.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_compact_log_serializer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_compact_log_serializer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_core_utils.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_core_utils.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_custom_data_recording.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_custom_data_recording.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_data_export.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_data_export.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_data_packetizer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_data_packetizer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_data_source_rle.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_data_source_rle.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_event_storage.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_event_storage.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_heap_stats.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_heap_stats.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_log.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_log.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_log_data_source.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_log_data_source.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_ram_reboot_info_tracking.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_ram_reboot_info_tracking.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_reboot_tracking_serializer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_reboot_tracking_serializer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_sdk_assert.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_sdk_assert.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_self_test.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_self_test.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_self_test_utils.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_self_test_utils.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_serializer_helper.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_serializer_helper.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_task_watchdog.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_task_watchdog.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_trace_event.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_trace_event.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_base64.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_base64.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_chunk_transport.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_chunk_transport.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_circular_buffer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_circular_buffer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_crc16_ccitt.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_crc16_ccitt.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_minimal_cbor.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_minimal_cbor.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_rle.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_rle.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_varint.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_varint.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_battery.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_battery.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_ble_session.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_ble_session.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_connectivity.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_connectivity.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_reliability.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_reliability.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_serializer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_serializer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_regions_armv7.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_regions_armv7.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_sdk_regions.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_sdk_regions.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_storage_debug.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_storage_debug.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_utils.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_utils.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_aarch64.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_aarch64.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_arm.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_arm.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_armv7_a_r.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_armv7_a_r.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_posix.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_posix.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_riscv.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_riscv.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_stdlib_assert.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_stdlib_assert.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_drain_chunks.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_cli_drain_chunks.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_log.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_cli_log.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_trace_event.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_cli_trace_event.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_core.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_core.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_shell.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_shell.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_shell_commands.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_shell_commands.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_watchdog.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_watchdog.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_aux.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/panics/memfault_demo_cli_aux.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_panics.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/panics/memfault_demo_panics.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_includes</name>
      		<type>2</type>
      		<locationURI>virtual:/virtual</locationURI>
      	</link>
      	<link>
      		<name>memfault_includes/components/include</name>
      		<type>2</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/include</locationURI>
      	</link>
      	<link>
      		<name>memfault_includes/ports/include</name>
      		<type>2</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/include</locationURI>
      	</link>
      	</linkedResources>
      </projectDescription>
    ''',
  })
# ---
# name: test_eclipse_project_patcher_nested_port
  dict({
    '.cproject': '''
      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
      <?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
      	<storageModule moduleId="org.eclipse.cdt.core.settings">
      		<cconfiguration id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446">
      			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446" moduleId="org.eclipse.cdt.core.settings" name="Debug">
      				<externalSettings />
      				<extensions>
      					<extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser" />
      					<extension id="org.eclipse.cdt.core.GASErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.GmakeErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.GLDErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.CWDLocator" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.GCCErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      				</extensions>
      			</storageModule>
      			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
      				<configuration artifactExtension="elf" artifactName="STM32L152RE_NUCLEO" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446" name="Debug" parent="fr.ac6.managedbuild.config.gnu.cross.exe.debug" postannouncebuildStep="Generating binary and Printing size information:" postbuildStep="arm-none-eabi-objcopy -O binary &quot;${BuildArtifactFileBaseName}.elf&quot; &quot;${BuildArtifactFileBaseName}.bin&quot; &amp;&amp; arm-none-eabi-size &quot;${BuildArtifactFileName}&quot;">
      					<folderInfo id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446." name="/" resourcePath="">
      						<toolChain id="fr.ac6.managedbuild.toolchain.gnu.cross.exe.debug.67646101" name="Ac6 STM32 MCU GCC" superClass="fr.ac6.managedbuild.toolchain.gnu.cross.exe.debug">
      							<option id="fr.ac6.managedbuild.option.gnu.cross.prefix.433022468" name="Prefix" superClass="fr.ac6.managedbuild.option.gnu.cross.prefix" value="arm-none-eabi-" valueType="string" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.mcu.1023045885" name="Mcu" superClass="fr.ac6.managedbuild.option.gnu.cross.mcu" value="STM32L152RETx" valueType="string" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.board.544478532" name="Board" superClass="fr.ac6.managedbuild.option.gnu.cross.board" value="NUCLEO-L152RE" valueType="string" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.instructionSet.1885819322" name="Instruction Set" superClass="fr.ac6.managedbuild.option.gnu.cross.instructionSet" value="fr.ac6.managedbuild.option.gnu.cross.instructionSet.thumbII" valueType="enumerated" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.fpu.460055244" name="Floating point hardware" superClass="fr.ac6.managedbuild.option.gnu.cross.fpu" value="fr.ac6.managedbuild.option.gnu.cross.fpu.no" valueType="enumerated" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.floatabi.1747886298" name="Floating-point ABI" superClass="fr.ac6.managedbuild.option.gnu.cross.floatabi" value="fr.ac6.managedbuild.option.gnu.cross.floatabi.soft" valueType="enumerated" />
      							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="fr.ac6.managedbuild.targetPlatform.gnu.cross.66510091" isAbstract="false" osList="all" superClass="fr.ac6.managedbuild.targetPlatform.gnu.cross" />
      							<builder buildPath="${workspace_loc:/STM32L152RE_NUCLEO}/Debug" id="fr.ac6.managedbuild.builder.gnu.cross.583621442" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="fr.ac6.managedbuild.builder.gnu.cross">
      								<outputEntries>
      									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="Debug" />
      								</outputEntries>
      							</builder>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.531660266" name="MCU GCC Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler">
      								<option defaultValue="gnu.c.optimization.level.none" id="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level.1209880627" name="Optimization Level" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" value="fr.ac6.managedbuild.gnu.c.optimization.level.size" valueType="enumerated" />
      								<option id="gnu.c.compiler.option.debugging.level.589920417" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated" />
      								<option id="gnu.c.compiler.option.include.paths.182831158" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
      									<listOptionValue builtIn="false" value="../../../Inc" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/CMSIS/Device/ST/STM32L1xx/Include" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/STM32L1xx_HAL_Driver/Inc" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/BSP/STM32L1xx_Nucleo" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Middlewares/Third_Party/FreeRTOS/Source/include" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/CMSIS/Include" />
      								<listOptionValue builtin="false" value="&quot;${workspace_loc:/${ProjName}/memfault_includes/components/include}&quot;" />
      									<listOptionValue builtin="false" value="&quot;${workspace_loc:/${ProjName}/memfault_includes/ports/include}&quot;" />
      									</option>
      								<option id="gnu.c.compiler.option.preprocessor.def.symbols.824961392" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
      									<listOptionValue builtIn="false" value="STM32L152xE" />
      									<listOptionValue builtIn="false" value="USE_STM32L1XX_NUCLEO" />
      									<listOptionValue builtIn="false" value="USE_HAL_DRIVER" />
      								</option>
      								<option id="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other.867106523" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-fmessage-length=0" valueType="string" />
      								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c.500700198" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c" />
      								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.s.1769769059" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.s" />
      							</tool>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler.1807716003" name="MCU G++ Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler">
      								<option id="gnu.cpp.compiler.option.optimization.level.555190386" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated" />
      								<option id="gnu.cpp.compiler.option.debugging.level.1333063404" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated" />
      							</tool>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.c.linker.48637223" name="MCU GCC Linker" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.linker">
      								<option id="fr.ac6.managedbuild.tool.gnu.cross.c.linker.script.2000917657" name="Linker Script (-T)" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.linker.script" value="../STM32L152RETx_FLASH.ld" valueType="string" />
      								<option id="gnu.c.link.option.libs.493794812" name="Libraries (-l)" superClass="gnu.c.link.option.libs" />
      								<option id="gnu.c.link.option.paths.179691201" name="Library search path (-L)" superClass="gnu.c.link.option.paths" />
      								<option id="gnu.c.link.option.ldflags.2147304053" name="Linker flags" superClass="gnu.c.link.option.ldflags" value="-specs=nosys.specs -specs=nano.specs" valueType="string" />
      								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.1696379112" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
      									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)" />
      									<additionalInput kind="additionalinput" paths="$(LIBS)" />
      								</inputType>
      							</tool>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.cpp.linker.1642466824" name="MCU G++ Linker" superClass="fr.ac6.managedbuild.tool.gnu.cross.cpp.linker" />
      							<tool id="fr.ac6.managedbuild.tool.gnu.archiver.401772641" name="MCU GCC Archiver" superClass="fr.ac6.managedbuild.tool.gnu.archiver" />
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.assembler.756297622" name="MCU GCC Assembler" superClass="fr.ac6.managedbuild.tool.gnu.cross.assembler">
      								<option id="gnu.both.asm.option.include.paths.1934772483" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath" />
      								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1812370298" superClass="cdt.managedbuild.tool.gnu.assembler.input" />
      								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.assembler.input.134028949" superClass="fr.ac6.managedbuild.tool.gnu.cross.assembler.input" />
      							</tool>
      						</toolChain>
      					</folderInfo>
      					<sourceEntries>
      						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="" />
      					</sourceEntries>
      				</configuration>
      			</storageModule>
      			<storageModule moduleId="org.eclipse.cdt.core.externalSettings" />
      		</cconfiguration>
      	</storageModule>
      	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
      		<project id="STM32L152RE_NUCLEO.fr.ac6.managedbuild.target.gnu.cross.exe.1040121120" name="Executable" projectType="fr.ac6.managedbuild.target.gnu.cross.exe" />
      	</storageModule>
      	<storageModule moduleId="scannerConfiguration">
      		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="" />
      		<scannerConfigBuildInfo instanceId="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446;fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446.;fr.ac6.managedbuild.tool.gnu.cross.c.compiler.531660266;fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c.500700198">
      			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId="" />
      		</scannerConfigBuildInfo>
      		
      	</storageModule>
      	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders" />
      	<storageModule moduleId="refreshScope" versionNumber="2">
      		<configuration artifactName="STM32L152RE_NUCLEO" configurationName="Debug">
      			<resource resourceType="PROJECT" workspacePath="STM32L152RE_NUCLEO" />
      		</configuration>
      	</storageModule>
      </cproject>
    ''',
    '.project': '''
      <projectDescription>
      	<name>STM32L152RE_NUCLEO</name>
      	<comment />
      	<projects>
      	</projects>
      	<buildSpec>
      		<buildCommand>
      			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
      			<triggers>clean,full,incremental,</triggers>
      			<arguments>
      			</arguments>
      		</buildCommand>
      		<buildCommand>
      			<name>org.eclipse.cdt.managedbuilder.core.ScannerConfigBuilder</name>
      			<triggers>full,incremental,</triggers>
      			<arguments>
      			</arguments>
      		</buildCommand>
      	</buildSpec>
      	<natures>
      		<nature>org.eclipse.cdt.core.cnature</nature>
      		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
      		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
      		<nature>fr.ac6.mcu.ide.core.MCUProjectNature</nature>
      	</natures>
      	<linkedResources><link>
      			<name>Middlewares/FreeRTOS/tasks.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/tasks.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc_ex.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_rcc_ex.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_gpio.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_gpio.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_cortex.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_cortex.c</location>
      		</link><link>
      			<name>Application/User/stm32l1xx_it.c</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/Src/stm32l1xx_it.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/portable/heap_4.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/CMSIS_RTOS/cmsis_os.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c</location>
      		</link><link>
      			<name>Drivers/BSP/STM32L1xx_Nucleo/stm32l1xx_nucleo.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/BSP/STM32L1xx_Nucleo/stm32l1xx_nucleo.c</location>
      		</link><link>
      			<name>Application/User/main.c</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/Src/main.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/queue.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/queue.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/list.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/list.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_pwr.c</location>
      		</link><link>
      			<name>Application/SW4STM32/startup_stm32l152xe.s</name>
      			<type>1</type>
      			<location>PARENT-1-PROJECT_LOC/startup_stm32l152xe.s</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_rcc.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/portable/port.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3/port.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr_ex.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_pwr_ex.c</location>
      		</link><link>
      			<name>Doc/readme.txt</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/readme.txt</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/timers.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/timers.c</location>
      		</link><link>
      			<name>Drivers/CMSIS/system_stm32l1xx.c</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/Src/system_stm32l1xx.c</location>
      		</link>
      		
      	<link>
      		<name>memfault_components</name>
      		<type>2</type>
      		<locationURI>virtual:/virtual</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/arch_arm_cortex_m.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/arch_arm_cortex_m.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_batched_events.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_batched_events.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_build_id.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_build_id.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_compact_log_serializer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_compact_log_serializer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_core_utils.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_core_utils.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_custom_data_recording.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_custom_data_recording.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_data_export.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_data_export.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_data_packetizer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_data_packetizer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_data_source_rle.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_data_source_rle.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_event_storage.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_event_storage.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_heap_stats.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_heap_stats.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_log.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_log.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_log_data_source.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_log_data_source.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_ram_reboot_info_tracking.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_ram_reboot_info_tracking.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_reboot_tracking_serializer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_reboot_tracking_serializer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_sdk_assert.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_sdk_assert.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_self_test.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_self_test.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_self_test_utils.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_self_test_utils.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_serializer_helper.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_serializer_helper.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_task_watchdog.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_task_watchdog.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_trace_event.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_trace_event.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_base64.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_base64.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_chunk_transport.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_chunk_transport.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_circular_buffer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_circular_buffer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_crc16_ccitt.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_crc16_ccitt.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_minimal_cbor.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_minimal_cbor.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_rle.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_rle.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_varint.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_varint.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_battery.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_battery.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_ble_session.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_ble_session.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_connectivity.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_connectivity.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_reliability.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_reliability.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_serializer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_serializer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_regions_armv7.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_regions_armv7.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_sdk_regions.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_sdk_regions.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_storage_debug.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_storage_debug.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_utils.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_utils.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_aarch64.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_aarch64.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_arm.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_arm.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_armv7_a_r.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_armv7_a_r.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_posix.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_posix.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_riscv.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_riscv.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_stdlib_assert.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_stdlib_assert.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_drain_chunks.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_cli_drain_chunks.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_log.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_cli_log.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_trace_event.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_cli_trace_event.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_core.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_core.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_shell.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_shell.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_shell_commands.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_shell_commands.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_watchdog.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_watchdog.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_aux.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/panics/memfault_demo_cli_aux.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_panics.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/panics/memfault_demo_panics.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_includes</name>
      		<type>2</type>
      		<locationURI>virtual:/virtual</locationURI>
      	</link>
      	<link>
      		<name>memfault_includes/components/include</name>
      		<type>2</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/include</locationURI>
      	</link>
      	<link>
      		<name>memfault_includes/ports/include</name>
      		<type>2</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/include</locationURI>
      	</link>
      	<link>
      		<name>memfault_dialog_da145xx</name>
      		<type>2</type>
      		<locationURI>virtual:/virtual</locationURI>
      	</link>
      	<link>
      		<name>memfault_dialog_da145xx/memfault_platform_core.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/dialog/da145xx/memfault_platform_core.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_dialog_da145xx/memfault_platform_coredump_regions.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/dialog/da145xx/memfault_platform_coredump_regions.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_dialog_da145xx/memfault_platform_coredump_storage.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/dialog/da145xx/memfault_platform_coredump_storage.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_dialog_da145xx/memfault_platform_debug_log.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/dialog/da145xx/memfault_platform_debug_log.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_dialog_da145xx/memfault_platform_metrics.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/dialog/da145xx/memfault_platform_metrics.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_dialog_da145xx/reset_reboot_tracking.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/dialog/da145xx/reset_reboot_tracking.c</locationURI>
      	</link>
      	</linkedResources>
      </projectDescription>
    ''',
  })
# ---
# name: test_eclipse_project_patcher_single_dir_port
  dict({
    '.cproject': '''
      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
      <?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
      	<storageModule moduleId="org.eclipse.cdt.core.settings">
      		<cconfiguration id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446">
      			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446" moduleId="org.eclipse.cdt.core.settings" name="Debug">
      				<externalSettings />
      				<extensions>
      					<extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser" />
      					<extension id="org.eclipse.cdt.core.GASErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.GmakeErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.GLDErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.CWDLocator" point="org.eclipse.cdt.core.ErrorParser" />
      					<extension id="org.eclipse.cdt.core.GCCErrorParser" point="org.eclipse.cdt.core.ErrorParser" />
      				</extensions>
      			</storageModule>
      			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
      				<configuration artifactExtension="elf" artifactName="STM32L152RE_NUCLEO" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446" name="Debug" parent="fr.ac6.managedbuild.config.gnu.cross.exe.debug" postannouncebuildStep="Generating binary and Printing size information:" postbuildStep="arm-none-eabi-objcopy -O binary &quot;${BuildArtifactFileBaseName}.elf&quot; &quot;${BuildArtifactFileBaseName}.bin&quot; &amp;&amp; arm-none-eabi-size &quot;${BuildArtifactFileName}&quot;">
      					<folderInfo id="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446." name="/" resourcePath="">
      						<toolChain id="fr.ac6.managedbuild.toolchain.gnu.cross.exe.debug.67646101" name="Ac6 STM32 MCU GCC" superClass="fr.ac6.managedbuild.toolchain.gnu.cross.exe.debug">
      							<option id="fr.ac6.managedbuild.option.gnu.cross.prefix.433022468" name="Prefix" superClass="fr.ac6.managedbuild.option.gnu.cross.prefix" value="arm-none-eabi-" valueType="string" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.mcu.1023045885" name="Mcu" superClass="fr.ac6.managedbuild.option.gnu.cross.mcu" value="STM32L152RETx" valueType="string" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.board.544478532" name="Board" superClass="fr.ac6.managedbuild.option.gnu.cross.board" value="NUCLEO-L152RE" valueType="string" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.instructionSet.1885819322" name="Instruction Set" superClass="fr.ac6.managedbuild.option.gnu.cross.instructionSet" value="fr.ac6.managedbuild.option.gnu.cross.instructionSet.thumbII" valueType="enumerated" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.fpu.460055244" name="Floating point hardware" superClass="fr.ac6.managedbuild.option.gnu.cross.fpu" value="fr.ac6.managedbuild.option.gnu.cross.fpu.no" valueType="enumerated" />
      							<option id="fr.ac6.managedbuild.option.gnu.cross.floatabi.1747886298" name="Floating-point ABI" superClass="fr.ac6.managedbuild.option.gnu.cross.floatabi" value="fr.ac6.managedbuild.option.gnu.cross.floatabi.soft" valueType="enumerated" />
      							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="fr.ac6.managedbuild.targetPlatform.gnu.cross.66510091" isAbstract="false" osList="all" superClass="fr.ac6.managedbuild.targetPlatform.gnu.cross" />
      							<builder buildPath="${workspace_loc:/STM32L152RE_NUCLEO}/Debug" id="fr.ac6.managedbuild.builder.gnu.cross.583621442" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="fr.ac6.managedbuild.builder.gnu.cross">
      								<outputEntries>
      									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="Debug" />
      								</outputEntries>
      							</builder>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.531660266" name="MCU GCC Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler">
      								<option defaultValue="gnu.c.optimization.level.none" id="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level.1209880627" name="Optimization Level" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" value="fr.ac6.managedbuild.gnu.c.optimization.level.size" valueType="enumerated" />
      								<option id="gnu.c.compiler.option.debugging.level.589920417" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated" />
      								<option id="gnu.c.compiler.option.include.paths.182831158" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
      									<listOptionValue builtIn="false" value="../../../Inc" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/CMSIS/Device/ST/STM32L1xx/Include" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/STM32L1xx_HAL_Driver/Inc" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/BSP/STM32L1xx_Nucleo" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Middlewares/Third_Party/FreeRTOS/Source/include" />
      									<listOptionValue builtIn="false" value="../../../../../../../../Drivers/CMSIS/Include" />
      								<listOptionValue builtin="false" value="&quot;${workspace_loc:/${ProjName}/memfault_includes/components/include}&quot;" />
      									<listOptionValue builtin="false" value="&quot;${workspace_loc:/${ProjName}/memfault_includes/ports/include}&quot;" />
      									</option>
      								<option id="gnu.c.compiler.option.preprocessor.def.symbols.824961392" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
      									<listOptionValue builtIn="false" value="STM32L152xE" />
      									<listOptionValue builtIn="false" value="USE_STM32L1XX_NUCLEO" />
      									<listOptionValue builtIn="false" value="USE_HAL_DRIVER" />
      								</option>
      								<option id="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other.867106523" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-fmessage-length=0" valueType="string" />
      								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c.500700198" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c" />
      								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.s.1769769059" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.s" />
      							</tool>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler.1807716003" name="MCU G++ Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.cpp.compiler">
      								<option id="gnu.cpp.compiler.option.optimization.level.555190386" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated" />
      								<option id="gnu.cpp.compiler.option.debugging.level.1333063404" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated" />
      							</tool>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.c.linker.48637223" name="MCU GCC Linker" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.linker">
      								<option id="fr.ac6.managedbuild.tool.gnu.cross.c.linker.script.2000917657" name="Linker Script (-T)" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.linker.script" value="../STM32L152RETx_FLASH.ld" valueType="string" />
      								<option id="gnu.c.link.option.libs.493794812" name="Libraries (-l)" superClass="gnu.c.link.option.libs" />
      								<option id="gnu.c.link.option.paths.179691201" name="Library search path (-L)" superClass="gnu.c.link.option.paths" />
      								<option id="gnu.c.link.option.ldflags.2147304053" name="Linker flags" superClass="gnu.c.link.option.ldflags" value="-specs=nosys.specs -specs=nano.specs" valueType="string" />
      								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.1696379112" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
      									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)" />
      									<additionalInput kind="additionalinput" paths="$(LIBS)" />
      								</inputType>
      							</tool>
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.cpp.linker.1642466824" name="MCU G++ Linker" superClass="fr.ac6.managedbuild.tool.gnu.cross.cpp.linker" />
      							<tool id="fr.ac6.managedbuild.tool.gnu.archiver.401772641" name="MCU GCC Archiver" superClass="fr.ac6.managedbuild.tool.gnu.archiver" />
      							<tool id="fr.ac6.managedbuild.tool.gnu.cross.assembler.756297622" name="MCU GCC Assembler" superClass="fr.ac6.managedbuild.tool.gnu.cross.assembler">
      								<option id="gnu.both.asm.option.include.paths.1934772483" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath" />
      								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1812370298" superClass="cdt.managedbuild.tool.gnu.assembler.input" />
      								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.assembler.input.134028949" superClass="fr.ac6.managedbuild.tool.gnu.cross.assembler.input" />
      							</tool>
      						</toolChain>
      					</folderInfo>
      					<sourceEntries>
      						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="" />
      					</sourceEntries>
      				</configuration>
      			</storageModule>
      			<storageModule moduleId="org.eclipse.cdt.core.externalSettings" />
      		</cconfiguration>
      	</storageModule>
      	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
      		<project id="STM32L152RE_NUCLEO.fr.ac6.managedbuild.target.gnu.cross.exe.1040121120" name="Executable" projectType="fr.ac6.managedbuild.target.gnu.cross.exe" />
      	</storageModule>
      	<storageModule moduleId="scannerConfiguration">
      		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="" />
      		<scannerConfigBuildInfo instanceId="fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446;fr.ac6.managedbuild.config.gnu.cross.exe.debug.900604446.;fr.ac6.managedbuild.tool.gnu.cross.c.compiler.531660266;fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c.500700198">
      			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId="" />
      		</scannerConfigBuildInfo>
      		
      	</storageModule>
      	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders" />
      	<storageModule moduleId="refreshScope" versionNumber="2">
      		<configuration artifactName="STM32L152RE_NUCLEO" configurationName="Debug">
      			<resource resourceType="PROJECT" workspacePath="STM32L152RE_NUCLEO" />
      		</configuration>
      	</storageModule>
      </cproject>
    ''',
    '.project': '''
      <projectDescription>
      	<name>STM32L152RE_NUCLEO</name>
      	<comment />
      	<projects>
      	</projects>
      	<buildSpec>
      		<buildCommand>
      			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
      			<triggers>clean,full,incremental,</triggers>
      			<arguments>
      			</arguments>
      		</buildCommand>
      		<buildCommand>
      			<name>org.eclipse.cdt.managedbuilder.core.ScannerConfigBuilder</name>
      			<triggers>full,incremental,</triggers>
      			<arguments>
      			</arguments>
      		</buildCommand>
      	</buildSpec>
      	<natures>
      		<nature>org.eclipse.cdt.core.cnature</nature>
      		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
      		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
      		<nature>fr.ac6.mcu.ide.core.MCUProjectNature</nature>
      	</natures>
      	<linkedResources><link>
      			<name>Middlewares/FreeRTOS/tasks.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/tasks.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc_ex.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_rcc_ex.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_gpio.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_gpio.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_cortex.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_cortex.c</location>
      		</link><link>
      			<name>Application/User/stm32l1xx_it.c</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/Src/stm32l1xx_it.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/portable/heap_4.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/CMSIS_RTOS/cmsis_os.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c</location>
      		</link><link>
      			<name>Drivers/BSP/STM32L1xx_Nucleo/stm32l1xx_nucleo.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/BSP/STM32L1xx_Nucleo/stm32l1xx_nucleo.c</location>
      		</link><link>
      			<name>Application/User/main.c</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/Src/main.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/queue.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/queue.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/list.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/list.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_pwr.c</location>
      		</link><link>
      			<name>Application/SW4STM32/startup_stm32l152xe.s</name>
      			<type>1</type>
      			<location>PARENT-1-PROJECT_LOC/startup_stm32l152xe.s</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_rcc.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_rcc.c</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/portable/port.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3/port.c</location>
      		</link><link>
      			<name>Drivers/STM32L1xx_HAL_Driver/stm32l1xx_hal_pwr_ex.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Drivers/STM32L1xx_HAL_Driver/Src/stm32l1xx_hal_pwr_ex.c</location>
      		</link><link>
      			<name>Doc/readme.txt</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/readme.txt</location>
      		</link><link>
      			<name>Middlewares/FreeRTOS/timers.c</name>
      			<type>1</type>
      			<location>PARENT-7-PROJECT_LOC/Middlewares/Third_Party/FreeRTOS/Source/timers.c</location>
      		</link><link>
      			<name>Drivers/CMSIS/system_stm32l1xx.c</name>
      			<type>1</type>
      			<location>PARENT-2-PROJECT_LOC/Src/system_stm32l1xx.c</location>
      		</link>
      		
      	<link>
      		<name>memfault_components</name>
      		<type>2</type>
      		<locationURI>virtual:/virtual</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/arch_arm_cortex_m.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/arch_arm_cortex_m.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_batched_events.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_batched_events.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_build_id.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_build_id.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_compact_log_serializer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_compact_log_serializer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_core_utils.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_core_utils.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_custom_data_recording.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_custom_data_recording.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_data_export.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_data_export.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_data_packetizer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_data_packetizer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_data_source_rle.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_data_source_rle.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_event_storage.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_event_storage.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_heap_stats.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_heap_stats.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_log.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_log.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_log_data_source.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_log_data_source.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_ram_reboot_info_tracking.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_ram_reboot_info_tracking.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_reboot_tracking_serializer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_reboot_tracking_serializer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_sdk_assert.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_sdk_assert.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_self_test.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_self_test.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_self_test_utils.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_self_test_utils.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_serializer_helper.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_serializer_helper.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_task_watchdog.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_task_watchdog.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_trace_event.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/core/src/memfault_trace_event.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_base64.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_base64.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_chunk_transport.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_chunk_transport.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_circular_buffer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_circular_buffer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_crc16_ccitt.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_crc16_ccitt.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_minimal_cbor.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_minimal_cbor.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_rle.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_rle.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_varint.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/util/src/memfault_varint.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_battery.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_battery.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_ble_session.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_ble_session.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_connectivity.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_connectivity.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_reliability.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_reliability.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_metrics_serializer.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/metrics/src/memfault_metrics_serializer.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_regions_armv7.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_regions_armv7.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_sdk_regions.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_sdk_regions.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_storage_debug.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_storage_debug.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_coredump_utils.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_coredump_utils.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_aarch64.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_aarch64.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_arm.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_arm.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_armv7_a_r.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_armv7_a_r.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_posix.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_posix.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_fault_handling_riscv.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_fault_handling_riscv.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_stdlib_assert.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/panics/src/memfault_stdlib_assert.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_drain_chunks.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_cli_drain_chunks.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_log.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_cli_log.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_trace_event.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_cli_trace_event.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_core.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_core.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_shell.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_shell.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_shell_commands.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_shell_commands.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_watchdog.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/memfault_demo_watchdog.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_cli_aux.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/panics/memfault_demo_cli_aux.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_components/memfault_demo_panics.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/demo/src/panics/memfault_demo_panics.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_includes</name>
      		<type>2</type>
      		<locationURI>virtual:/virtual</locationURI>
      	</link>
      	<link>
      		<name>memfault_includes/components/include</name>
      		<type>2</type>
      		<locationURI>PARENT-3-PROJECT_LOC/components/include</locationURI>
      	</link>
      	<link>
      		<name>memfault_includes/ports/include</name>
      		<type>2</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/include</locationURI>
      	</link>
      	<link>
      		<name>memfault_freertos</name>
      		<type>2</type>
      		<locationURI>virtual:/virtual</locationURI>
      	</link>
      	<link>
      		<name>memfault_freertos/memfault_core_freertos.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/freertos/src/memfault_core_freertos.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_freertos/memfault_freertos_ram_regions.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/freertos/src/memfault_freertos_ram_regions.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_freertos/memfault_metrics_freertos.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/freertos/src/memfault_metrics_freertos.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_freertos/memfault_panics_freertos.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/freertos/src/memfault_panics_freertos.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_freertos/memfault_sdk_metrics_freertos.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/freertos/src/memfault_sdk_metrics_freertos.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_freertos/memfault_sdk_metrics_thread.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/freertos/src/memfault_sdk_metrics_thread.c</locationURI>
      	</link>
      	<link>
      		<name>memfault_freertos/memfault_self_test_platform.c</name>
      		<type>1</type>
      		<locationURI>PARENT-3-PROJECT_LOC/ports/freertos/src/memfault_self_test_platform.c</locationURI>
      	</link>
      	</linkedResources>
      </projectDescription>
    ''',
  })
# ---
